<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutAnimation="@anim/animation_fade_in"
        tools:context=".ui.view.onboard.NicknameFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_quesookt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/cl_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_quesookt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quesookt"
                android:textColor="@color/main_sky"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_quesookt"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/et_nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="@color/main_sky"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_input"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_plz"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="102dp"
            android:background="@drawable/selector_confirm_background"
            android:paddingHorizontal="21dp"
            android:paddingVertical="6dp"
            android:text="@string/confirm"
            android:textColor="@color/selector_confirm"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="20dp"
            android:text="@string/limit"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_confirm"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/main_sky"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_limit"
            app:layout_constraintEnd_toStartOf="@+id/tv_limit"
            app:layout_constraintTop_toTopOf="@+id/tv_limit" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rectangle_border_sky_10"
            android:ems="10"
            android:hint="@string/nickname_hint"
            android:inputType="textPersonName"
            android:maxLength="7"
            android:paddingVertical="14dp"
            android:paddingStart="12dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_limit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/nunsong_height"
            android:layout_height="0dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/img_nunsong_hat"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>